--- a/pm-proj004/index.html
+++ b/pm-proj004/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <ul>
-        <li class="feito"><img src="done---1477-.png" alt="Feito" class="done"><a href="/pm-proj001/">Projeto 001<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="/pm-proj001/"><a href="/pm-proj002/">Projeto 002<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="/pm-proj001/"><a href="/pm-proj003/">Projeto 003<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="/pm-proj001/"><a href="/">Projeto 004<img src="arrow-right---336-.png" class="seta"></a></li>
+        <li class="feito"><img src="done---1477-.png" alt="Feito" class="done"><a href="pm-proj001">Projeto 001<img src="arrow-right---336-.png" class="seta"></a></li>
+        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="pm-proj002">Projeto 002<img src="arrow-right---336-.png" class="seta"></a></li>
+        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="pm-proj003">Projeto 003<img src="arrow-right---336-.png" class="seta"></a></li>
+        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="index.html">Projeto 004<img src="arrow-right---336-.png" class="seta"></a></li>
     </ul>
 </body>
 </html>
