--- a/pm-proj004/index.html
+++ b/pm-proj004/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <ul>
-        <li class="feito"><img src="done---1477-.png" alt="Feito" class="done"><a href="../pm-proj001">Projeto 001<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="../pm-proj002">Projeto 002<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="../pm-proj003">Projeto 003<img src="arrow-right---336-.png" class="seta"></a></li>
-        <li><img src="done---1477--copy-3.png" alt="Pendente" class="done"><a href="../pm-proj004">Projeto 004<img src="arrow-right---336-.png" class="seta"></a></li>
+        <li class="feito">
+            <a href="../pm-proj001">Projeto 001</a>
+        </li>
+        <li><a href="../pm-proj002">Projeto 002</a></li>
+        <li><a href="../pm-proj003">Projeto 003</a></li>
+        <li><a href="../pm-proj004">Projeto 004</a></li>
     </ul>
 </body>
 </html>
