alteracao titulo index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Projetos</title>
+        <title>PROJETOS</title>
     </head>
     <body>
         <h1><a href="pm-proj004">Projetos</a></h1>
