--- a/pm-proj004/index.html
+++ b/pm-proj004/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <ul>
-        <li class="feito">
-            <a href="../pm-proj001">Projeto 001</a>
-        </li>
+        <li class="feito"><a href="../pm-proj001">Projeto 001</a></li>
         <li class="feito"><a href="../pm-proj002">Projeto 002</a></li>
         <li class="feito"><a href="../pm-proj003">Projeto 003</a></li>
         <li class="feito"><a href="../pm-proj004">Projeto 004</a></li>
