--- a/pm-proj006/index.html
+++ b/pm-proj006/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" media="(max-width:320px)" href="mobile.css">
+    <link rel="stylesheet" media="(min-width:321px)" href="desktop.css">
     <title>Projeto 6</title>
 </head>
 <body>
-    <img class="logo" src="logo-playcode.png">
-    <div class="cartoes">
+       <container class="logo">
+           
         <div>
             <img src="card1.png" alt="Velho?!">
             <h2>Sou velho para ser programador?</h2>
@@ -35,6 +36,7 @@
             <img src="card6.png" alt="Boa ideia para startup?">
             <h2>O que é uma boa ideia para startup</h2>
         </div>
-    </div>
+        
+    </container>
 </body>
 </html>
