Finalizando topo da página

--- a/pm-proj007/index.html
+++ b/pm-proj007/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div id=container>
-            <h1>Titum</h1>
+            <h1>
+                <span>Titum</span>
+            </h1>
             <nav id="menu">
                 <ul>
                     <li><a href="#">Conheça</a></li>
@@ -22,7 +24,9 @@
     </header>
     <section id="topo">
         <div id=container>
-            
+            <h2>Conheça Titum</h2>
+            <h3>A nova moda do momento.</h3>
+            <button>Saiba mais</button>
         </div>
     </section>
     <section id="conheca">
