Finalizando terceira section

--- a/pm-proj007/index.html
+++ b/pm-proj007/index.html
@@ -38,7 +38,8 @@
     </section>
     <section id="depoimento">
         <div id="container">
-            
+            <p>“Titum foi sem dúvida a melhor coisa que aconteceu na minha vida. Eu não sei como consegui viver sem o Titum até hoje”</p>
+            <p id="assinatura">Cláudia Santos</p>
         </div>
     </section>
     <section id="convite">
