--- a/pm-proj007/index.html
+++ b/pm-proj007/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Conheça</a></li>
                     <li><a href="#">Depoimentos</a></li>
-                    <li><a href="#">Convite</a></li>
+                    <li><a href="#" id="convite">Convite</a></li>
                 </ul>
             </nav>
         </div>
