--- a/pm-proj004/index.html
+++ b/pm-proj004/index.html
@@ -14,7 +14,8 @@
         <li class="feito"><a href="../pm-proj003">Projeto 003</a></li>
         <li class="feito"><a href="../pm-proj004">Projeto 004</a></li>
         <li class="feito"><a href="../pm-proj005">Projeto 005</a></li>
-        <li class="feito"><a href="../pm-proj006/">Projeto 006</a></li>
+        <li class="feito"><a href="../pm-proj006">Projeto 006</a></li>
+        <li class="feito"><a href="../pm-proj007">Projeto 007</a></li>
     </ul>
 </body>
 </html>
