menu nav finalizado

--- a/pm-proj008/index.html
+++ b/pm-proj008/index.html
@@ -23,12 +23,19 @@
        </nav>
     </aside>
     <section>
-        <nav id="menu">
+        <nav id="menu_superior">
             <ul>
                 <li><span>Account</span></li>
                 <li><span>Billing</span></li>
             </ul>
         </nav>
+    </section>
+    <section id="formulario">
+       <h2>Personal Information</h2>
+        <form action="">
+            <input type="email" placeholder="tony.daniel@gmail.com">
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisl eget nunc molestie maximus.</span>
+        </form>
     </section>
 </body>
 </html>
