--- a/pm-proj008/index.html
+++ b/pm-proj008/index.html
@@ -29,13 +29,27 @@
                 <li><span>Billing</span></li>
             </ul>
         </nav>
-    </section>
-    <section id="formulario">
-       <h2>Personal Information</h2>
-        <form action="">
-            <input type="email" placeholder="tony.daniel@gmail.com">
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisl eget nunc molestie maximus.</span>
-        </form>
+        <section id="formulario">
+           <h2>Personal Information</h2>
+            <form action="">
+                <input class="email" type="email" placeholder="tony.daniel@gmail.com"><br>
+                    <div><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisl eget nunc molestie maximus.</span><br>
+                    </div>
+                <input type="text" placeholder="Tony"><br>
+                <input type="text" placeholder="Daniel"><br>
+                <input type="text" placeholder="New Zelland"><br>
+                <input type="tel" placeholder="551-580-1662"><br>
+                 <h2 class="senha">Password</h2>
+                <input class="password" type="password" placeholder="Password"><br>
+                <input class="password" type="password" placeholder="New password"><br>
+                <input class="password" type="password" placeholder="Repeat new password"><br>
+                <h2 class="senha">Anythings</h2>
+                <input type="checkbox" class="checkbox">
+                <span>Güncelleme ve yenilikleri mail olarak almak istiyorum.</span><br>
+                <input type="checkbox" class="checkbox">
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisl eget nunc molestie maximus.</span>
+            </form>
+        </section>
     </section>
 </body>
 </html>
